# CMakeList.txt : CMake project for ArViewUploader, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)
project("ArViewUploader")

# Add source to this project's executable.
add_executable (ArViewUploader "ArViewUploader.cpp" "ArViewUploader.h")

# TODO: Add tests and install targets if needed.
